yeni degisiklikler yapıldı

--- a/odev1/index.html
+++ b/odev1/index.html
@@ -1,24 +1,57 @@
 <h1>Dogukan Gercek</h1>
 <h2>Hakkimda</h2>
 <p>Merhaba. Ben Doğukan G. Ankara'da yaşıyorum. Kişisel gelişim kitapları ve felsefe okumayı çok seviyorum.</p>
-<h2><strong>Favori Kitaplarım</strong> </h2>
-<ul>
-    <li>
-        <h3><i>
-            Kendime Düşünceler : Marcus Aurelius
-        </i></h3>
-        <p>Lorem ipsum dolor sit amet.</p>
-    </li>
-    <li>
-        <h3><i>
-            İnsan Geleceğini Nasıl Kurar -İlber Ortaylı
-        </i></h3>
-        <p>Lorem ipsum dolor sit amet.</p>
-    </li>
-    <li>
-        <h3><i>
-            Atomik Alışkanlıklar - James Clear
-        </i></h3>
-        <p>Lorem ipsum dolor sit amet.</p>
-    </li>
-</ul>
+<h2><strong>İlgi Alanlarım</strong> </h2>
+<div>
+    <h3>Kitaplar</h3>
+    <ul>
+        <li>
+            <img src="images/marcus.jpg" alt="marcus">
+            <h3><i>
+                    Kendime Düşünceler - Marcus Aurelius
+                </i></h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+        <li>
+            <h3><i>
+                    İnsan Geleceğini Nasıl Kurar - İlber Ortaylı
+                </i></h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <a href="https://www.goodreads.com/tr/book/show/60496205-i-nsan-gelece-ini-nas-l-kurar" target="_blank">goodreads linki</a>
+        </li>
+        <li>
+            <h3><i>
+                    Atomik Alışkanlıklar - James Clear
+                </i></h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </li>
+    </ul>
+</div>
+<div>
+    <h3>Filmler</h3>
+    <ul>
+        <li>
+            <a href="https://www.imdb.com/title/tt0109830/" target="_blank">Forrest Gump</a>
+        </li>
+        <li>
+            <p>La La Land</p>
+        </li>
+        <li>
+            <p>Enigma</p>
+        </li>
+    </ul>
+</div>
+<div>
+    <h3>Diziler</h3>
+    <ul>
+        <li>
+            <a href="https://www.imdb.com/title/tt0108778/?ref_=nv_sr_srsg_0" target="_blank">Friends</a>
+        </li>
+        <li>
+            <p>The Walking Dead</p>
+        </li>
+        <li>
+            <p>Queen's Gambit</p>
+        </li>
+    </ul>
+</div>
