--- a/css/odev1/index.html
+++ b/css/odev1/index.html
@@ -11,7 +11,7 @@
     <nav class="nav">
         <ul >
             <li>
-                <a href="contact.html">Bana ulaşın!</a>
+                <a href="contact.html">Bana ulaşın!!</a>
             </li>
             <li >
                 <a href="https://www.instagram.com/ndogukang/" target="_blank">Instagram</a>
