--- a/bootsrap/odev1/inspiring-persons.html
+++ b/bootsrap/odev1/inspiring-persons.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>İlham veren insanlar</title>
 </head>
 
 <body style="background-color: #E9ECEF;">
@@ -28,26 +28,50 @@
             </div>
         </div>
     </nav>
-    <div class="container">
-        <div class="jumbotron text-center">
-            <h1 class="display-4 text-danger">Merhaba!</h1>
-            <p class="lead">Ben Doğukan. Kendi çapımda bir şeyler yaparak Web Development öğrenmeye çalışıyorum. Bu
-                sayfa tamamen kişisel bir sayfadır. Yukardaki menüde benim fikirlerimle alakalı sayfalar görebilirsiniz.
-                Bunlara göz atmanızı öneririm.</p>
-            <hr class="my-4">
-            <p> Hafta da 2 defa olmak üzere perşembe ve pazar günleri bir konu hakkında deneme veya blog, ilerleyen
-                zamanlarda da hafta da bir kere olmak üzere vlog çekeceğim. Daha fazlası için takipte kalın!</p>
-            <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Abone olun</a>
-            </p>
+    <section class="container ">
+        <div class="row bg-primary">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+                </div>
+              </div>
         </div>
-    </div>
-    <section>
+        
+
+        
 
     </section>
-    <article>
 
-    </article>
+
+
+
+
+
+
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
