--- a/bootsrap/odev1/inspiring-persons.html
+++ b/bootsrap/odev1/inspiring-persons.html
@@ -19,51 +19,23 @@
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"></button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active bg-secondary" href="#">
+                <a class="nav-link active bg-secondary" href="index.html">
                     <b>Doğukan Gerçek</b>
                     <span class="sr-only">(current)</span>
                 </a>
                 <a class="nav-link" href="inspiring-persons.html">İlham veren insanlar</a>
-                <a class="nav-link" href="#">Okunması gereken kitap ve filmler</a>
+                <a class="nav-link" href="books_films.html">Okunması gereken kitap ve filmler</a>
             </div>
         </div>
     </nav>
-    <section class="container ">
-        <div class="row bg-primary">
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-                </div>
-              </div>
+    <div class="container mt-3">
+        <h2 class="text-center bg-warning">İlham alınması gereken insanlar</h2>
+        <p class="text-info text-center">Bana göre ilham alınması gereken insanlar tam liste:</p>
+        <div class="row m-0">
+            <div class="col-sm-8 bg-primary ">dgfdf</div>
+            <div class="col-sm-4 bg-info ">gdf</div>
         </div>
-        
-
-        
-
-    </section>
-
+    </div>
 
 
 
