--- a/bootsrap/odev1/hazir.html
+++ b/bootsrap/odev1/hazir.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Merhaba!</title>
+    <title>Hello, world!</title>
 </head>
 
 <body style="background-color: #E9ECEF;">
@@ -19,7 +19,7 @@
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"></button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active bg-secondary" href="#">
+                <a class="nav-link active bg-secondary" href="index.html">
                     <b>Doğukan Gerçek</b>
                     <span class="sr-only">(current)</span>
                 </a>
@@ -28,26 +28,7 @@
             </div>
         </div>
     </nav>
-    <div class="container">
-        <div class="jumbotron text-center">
-            <h1 class="display-4 text-danger">Merhaba!</h1>
-            <p class="lead">Ben Doğukan. Kendi çapımda bir şeyler yaparak Web Development öğrenmeye çalışıyorum. Bu
-                sayfa tamamen kişisel bir sayfadır. Yukardaki menüde benim fikirlerimle alakalı sayfalar görebilirsiniz.
-                Bunlara göz atmanızı öneririm.</p>
-            <hr class="my-4">
-            <p> Hafta da 2 defa olmak üzere perşembe ve pazar günleri bir konu hakkında deneme veya blog, ilerleyen
-                zamanlarda da hafta da bir kere olmak üzere vlog çekeceğim. Daha fazlası için takipte kalın!</p>
-            <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Abone olun</a>
-            </p>
-        </div>
-    </div>
-    <section>
-
-    </section>
-    <article>
-
-    </article>
+    
 
     <!-- Optional JavaScript; choose one of the two! -->
 
