Site son haline getirildi.

--- a/bootsrap/odev1/index.html
+++ b/bootsrap/odev1/index.html
@@ -38,7 +38,7 @@
             <p> Hafta da 2 defa olmak üzere perşembe ve pazar günleri bir konu hakkında deneme veya blog, ilerleyen
                 zamanlarda da hafta da bir kere olmak üzere vlog çekeceğim. Daha fazlası için takipte kalın!</p>
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Abone olun</a>
+                <a class="btn btn-primary btn-lg" href="subscribe.html" role="button">Abone olun</a>
             </p>
         </div>
     </div>
