--- a/bootsrap/odev1/inspiring-persons.html
+++ b/bootsrap/odev1/inspiring-persons.html
@@ -11,6 +11,21 @@
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <title>İlham veren insanlar</title>
+    <style>
+    .img-thumbnail {
+    padding: 0.25rem;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    border-radius: 0.25rem;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    object-position: 80% 20%;
+    }
+    .bg-grey{
+        background-color: #888C8D ;
+    }
+    </style>
 </head>
 
 <body style="background-color: #E9ECEF;">
@@ -29,11 +44,30 @@
         </div>
     </nav>
     <div class="container mt-3">
-        <h2 class="text-center bg-warning">İlham alınması gereken insanlar</h2>
-        <p class="text-info text-center">Bana göre ilham alınması gereken insanlar tam liste:</p>
-        <div class="row m-0">
-            <div class="col-sm-8 bg-primary ">dgfdf</div>
-            <div class="col-sm-4 bg-info ">gdf</div>
+        <h2 class="text-center bg-success">İlham alınması gereken insanlar</h2>
+
+        <div class="row m-0" >
+            <div class="col-sm-8 bg-grey mb-3">
+                <h2>Marcus Aurelius</h2>
+                <p>M.S 6. yüzyılda yaşamış bir imparator filozof olan Marcus Aurelius, günümüzde hala çoğumuza ışık tutabilecek düşünceleri olan birisiydi. </p>
+            </div>
+            <div class="col-sm-4 mb-3">
+                <img class="img-thumbnail" src="img/450px-Metropolitan_Marcus_Aurelius_Roman_2C_AD_2-400x400.jpg" alt="Marcus Aurelius">
+            </div>
+            <div class="col-sm-8 bg-grey mb-3">
+                <h2>Mustafa Kemal ATATÜRK</h2>
+                <p>Tabiki her Türk gencinin listeye koyacağı isimlerden biri olacaktır Atatürk. </p>
+            </div>
+            <div class="col-sm-4 thumbnail mb-3">
+                <img class="img-thumbnail" src="img/Ataturk1930s.jpg" alt="Marcus Aurelius">
+            </div>
+            <div class="col-sm-8 bg-grey mb-3">
+                <h2>İlber Ortaylı</h2>
+                <p>Her yönüyle, günümüzde yaşayan gençlere büyük bir örnek sayın Prof. İlber Ortaylı. </p>
+            </div>
+            <div class="col-sm-4 thumbnail mb-3">
+                <img class="img-thumbnail" src="img/ilber-ortayli.jpeg" alt="Marcus Aurelius">
+            </div>
         </div>
     </div>
 
